--- a/styles.css
+++ b/styles.css
@@ -31,13 +31,13 @@ h1 {
     margin-top: 30px;
 }
 
-.file-list {
+.components-list {
     list-style-type: none;
     padding-left: 0;
     margin: 0;
 }
 
-.file-item {
+.component {
     margin: 5px 0;
 }
 
@@ -56,8 +56,39 @@ h1 {
     font-style: italic;
 }
 
-.file-description {
+.original-website-url {
     color: #666;
     font-size: 0.9em;
     margin: 0;
-} 
+}
+
+.component-details {
+    margin-left: 30px;
+}
+
+.badge {
+    display: inline-block;
+    padding: 2px 6px;
+    border-radius: 4px;
+    font-size: 0.8em;
+    margin-right: 4px;
+}
+
+.badge-success {
+    background-color: #81C784;
+    color: white;
+}
+
+.badge-neutral {
+    background-color: #BDBDBD;
+    color: white;
+}
+
+.badge-failure {
+    background-color: #E57373;
+    color: white;
+}
+
+.badge-container {
+    margin: 0;
+}
